# MFX_app

./: .gitignore  CMakeLists.txt  ReadMe.MD  pattern.txt  qml.qrc  settings.ini
installer/: 1.iss  installer.iss
installer/files/QtQuick/Controls.2/Material/: ComboBox.qml
installer/files/translations/: lang_ru.qm
installer/settings_files/: pattern.txt  settings.ini
qml/: qml.qrc
qml/MFX/: AddDimmerWidget.qml  AddSequencesWidget.qml  DeviceGroupWidget.qml  GeneralDeviceListWidget.qml  MfxButton.qml  MfxTable.qml  OutputScreen.qml  ProjectSettingsWidget.qml  TypeGroup.qml  main.qml
qml/MFX/UI/: AddDimmerWidget.qml  AddGroupWindow.qml  AddPyroWidget.qml  AddSequencesWidget.qml  AddShotPattern.qml  AddShotWidget.qml  ApplicationWindow.qml  CalcWidget.qml  ConfirmationDialog.qml  DeviceGroup.qml  DeviceGroupWidget.qml  DeviceLibWidget.qml  DeviceListWidget.qml  DevicePlate.qml  GeneralDeviceListWidget.qml  MFXApplicationWindow.qml  MFXApplicationWindowMenuBar.qml  MainScreen.qml  MfxButton.qml  MfxHilightedButton.qml  MfxMouseArea.qml  MfxTable.qml  MouseAreaWithHidingCursor.qml  OutputScreen.qml  ParticleEmiter.qml  PatchIcon.qml  PatchPlate.qml  PatchPlateCell.qml  PatchScreen.qml  Player.qml  PreferencesPopup.qml  PreviewIcon.qml  ProjectSettingsWidget.qml  RenameGroupWindow.qml  SceneFrameItem.qml  SceneSettingsWidget.qml  SceneWidget.qml  SideDockedWindow.qml  SortedDeviceListWidget.qml  StartScreen.qml  (+4 more)
qml/MFX/UI/Components/: qmldir
qml/MFX/UI/Components/Basic/: FramelessApplicationWindow.qml  MfxHilightedButton.qml  MfxMenu.qml  SelectableTableHeaderItem.qml  SideDockedWindow.qml  TextFieldWithBackground.qml  TransparentTextField.qml  qmldir
qml/MFX/UI/Components/CuePlate/: ActionMarkerComponent.qml  CuePlateComponent.qml  PrefireSpaceComponent.qml  qmldir
qml/MFX/UI/Components/MainScreen/: CalculatorComponent.qml  CueContentComponent.qml  CueListComponent.qml  DevicesListComponent.qml  qmldir
qml/MFX/UI/Components/PatchPlate/: PatchPlate.qml  qmldir
qml/MFX/UI/Components/Templates/: ColoredIcon.qml  ComboBox.qml  FramelessApplicationWindow.qml  LayoutSpacer.qml  RoundedRectangleShape.qml  RoundedTriangleShape.qml  TextField.qml  TextFieldWithBackground.qml  TextInputField.qml  qmldir
qml/MFX/UI/Components/Templates/TimeInput/: TimeInput.qml  TimeInputDelimeter.qml  TimeInputField.qml  TimeInputFieldMSec.qml  qmldir
qml/MFX/UI/MainScreen/: MainScreen.qml  PatchIcon.qml  Player.qml  RightPanel.qml  qmldir
qml/MFX/UI/Pages/: StartScreen.qml  qmldir
qml/MFX/UI/Styles/: Fonts.qml  Theme.qml  qmldir
resources/: resources.qrc  translations.qrc
resources/translations/: lang_en.qm  lang_en.ts  lang_ru.ts  russian.qm
src/: Action.cpp  Action.h  ActionsManager.cpp  ActionsManager.h  AudioTrackRepresentation.cpp  AudioTrackRepresentation.h  Backuper.cpp  Backuper.h  ComPortModel.cpp  ComPortModel.h  Cue.cpp  Cue.h  CueContent.cpp  CueContent.h  CueContentManager.cpp  CueContentManager.h  CueContentSortingModel.cpp  CueContentSortingModel.h  CueManager.cpp  CueManager.h  CueSortingModel.cpp  CueSortingModel.h  CursorManager.cpp  CursorManager.h  CustomPatternStore.cpp  CustomPatternStore.h  DMXDevice.cpp  DMXDevice.h  DMXPlugin.cpp  DMXPlugin.h  DMXWriter.cpp  DMXWriter.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  DmxWorker.cpp  DmxWorker.h  Group.cpp  Group.h  (+35 more)
src/Devices/: Device.cpp  Device.h  PreviewDevice.cpp  PreviewDevice.h  SequenceDevice.cpp  SequenceDevice.h  ShotDevice.cpp  ShotDevice.h
src/Patterns/: Pattern.h  ShotPattern.cpp  ShotPattern.h
src/Trace/: AppMessageHandler.cpp  AppMessageHandler.h  AppStackWalker.cpp  AppStackWalker.h  Logger.cpp  Logger.h
src/qml/: AddDimmerWidget.qml  AddGroupWindow.qml  AddPyroWidget.qml  AddSequencesWidget.qml  AddShotWidget.qml  CalcWidget.qml  ConfirmationDialog.qml  CuePlate.qml  DeviceGroup.qml  DeviceGroupWidget.qml  DeviceLibWidget.qml  DeviceLibWindow.qml  DeviceListWidget.qml  DevicePlate.qml  GeneralDeviceListWidget.qml  MainScreen.qml  MenuWidget.qml  MfxButton.qml  MfxHilightedButton.qml  MfxMenu.qml  MfxMouseArea.qml  MfxTable.qml  MouseAreaWithHidingCursor.qml  PatchIcon.qml  PatchPlate.qml  PatchPlateCell.qml  PatchScreen.qml  Player.qml  Player.qml.autosave  PlayerWidget.qml  ProjectSettingsWidget.qml  RenameGroupWindow.qml  SceneSettingsWidget.qml  SceneWidget.qml  SideDockedWindow.qml  SortedDeviceListWidget.qml  StartScreen.qml  TypeGroup.qml  UtilityWindow.qml  ZoomingMouseArea.qml  (+1 more)
translations/: create_ru.bat  russian.qm  russian.ts
